# gitlab-deployment-changelog

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml
gitlab_deployment_changelog/: gdc.py
src/: main.py
src/utils/: gitlab_connector.py  slack.py
